--- a/public/home.html
+++ b/public/home.html
@@ -21,29 +21,22 @@
     <button class="signout">button to signout</button>
     <div class="scrollContainer">
         <div class="switchcontainer">
-            <div class="dataConrtainer">
-                <h4>Device Name</h4>
-            </div>
-            <div class="schedule scele">
-                <i class="far fa-clock fa-4x"></i><br>
-                <label >Schedule: None</label>
-            </div>
-            <div class="switch scele"><i class="fas fa-power-off fa-4x" id="dstate"></i><br><label for="dstate">ON</label></div>
+            <i class="fas fa-lock fa-9x lockIcon" style="color:white;"></i>
         </div>
-   
+
 
     </div>
     <footer>
         <div class="fixedContainer">
             <button class="fixedbtn"><i class="navicon fas fa-home fa-4x"></i></button>
             <button class="fixedbtn"><i class="navicon fab fa-buromobelexperte fa-4x"></i></button>
-            <button class="fixedbtn"><i class="navicon fas fa-clock fa-4x"></i></button>
+            <button class="fixedbtn"><i class="navicon fas fa-globe fa-4x"></i></button>
         </div>
     </footer>
 </body>
 <script src="scripts/home.js"></script>
 <script>
-  
+
 </script>
 
 </html>
