--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
   <nav>
 
   </nav>
-  <p id="load"></p>
+  <p id="load">Orca</p>
   <div class="imgContain">
     <div class="wave1"></div>
     <img src="resources/background/2 (1).png" width="300px" height="300px" class="backgroundImg mobileBack">
@@ -68,8 +68,7 @@
   </div>
   <div class="registration">
     <form action="javascript:void(0);" class="signinForm">
-      <label id="emailLable" class="inputLable" for="email" style="color: black;font-weight: bold;">Orca
-        Login</label><br>
+      <label id="emailLable" class="inputLable" for="email" style="color: black;">Orca Login</label><br>
       <input id="email" type="email" placeholder="Email" class="formInput" autocomplete="email" autofocus /><br>
       <label id="passwordLable" class="inputLable" for="pass">Password</label><br>
       <input id="pass" type="password" placeholder="Password" class="formInput" /><br>
